--- a/QUIZ/index.html
+++ b/QUIZ/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Juego de Quiz</title>
+    <title>Academlo-Quiz</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
